# rust-cli-messager

./: .config  .env  .gitignore  Cargo.toml  README.md
migrations/2022-07-01-184500_create_messages/: up.sql
migrations/2022-07-24-213807_wiggles_user/: down.sql  up.sql
src/: app_inputs.rs  audio_handlers.rs  db.rs  lib.rs  main.rs  schema.rs  ui_render_handler.rs
src/events/: consumer.rs  mpsc_channel_handler.rs  producer.rs  stream_channel.rs  utils.rs
src/model/: models.rs  route_handler.rs
