[package]
name = "rust-cli-messager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.19", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
rand = { version = "0.7.3", default-features = false, features = ["std"] }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0"
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenv = "0.13.0"
actix-web = "4.1.0"
tokio = { version = "1.19.2", features = ["full"] }
unicode-segmentation = "1.2"
unicode-width = "0.1"
termion = { version = "1.5", optional = true }
bitflags = "1.3"
cassowary = "0.3"
rodio = "0.15.0"
futures = "0.1"
clap  = "2.33.0"
rdkafka = {version = "0.28.0", features = ["ssl", "sasl"] }
log = "0.4.17"

